k8s.tpl.yml
kind: Service
apiVersion: v1
metadata:
  name: ${APP_NAME}--web
  labels:
    app: ${APP_NAME}
spec:
  selector:
    name: ${APP_NAME}--web-pod
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: NodePort
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ${APP_NAME}--web
  labels:
    app: ${APP_NAME}
spec:
  replicas: ${CONTAINER_WEB_REPLICAS}
  selector:
    matchLabels:
      name: ${APP_NAME}--web-pod
  template:
    metadata:
      labels:
        name: ${APP_NAME}--web-pod
    spec:
      nodeSelector:
        nodegroup: ${WEB_NODE_GROUP}
      restartPolicy: Always
      containers:
      - name: ${APP_NAME}--web-container
        image: ${IMAGE_NAME}
        command: ["pipenv", "run", "gunicorn", "-c", "gunicorn.conf.py", "project.wsgi"]
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ${APP_NAME}--schedule
  labels:
    app: ${APP_NAME}
spec:
  replicas: ${CONTAINER_SCHEDULE_REPLICAS}
  selector:
    matchLabels:
      name: ${APP_NAME}--schedule-pod
  template:
    metadata:
      labels:
        name: ${APP_NAME}--schedule-pod
    spec:
      nodeSelector:
        nodegroup: ${WORKER_NODE_GROUP}
      restartPolicy: Always
      containers:
      - name: ${APP_NAME}--schedule-container
        image: ${IMAGE_NAME}
        command: ["pipenv", "run", "celery", "worker", "-A", "project", "--loglevel=info", "-Q", "schedule"]
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ${APP_NAME}--ninja
  labels:
    app: ${APP_NAME}
spec:
  replicas: ${CONTAINER_NINJA_REPLICAS}
  selector:
    matchLabels:
      name: ${APP_NAME}--ninja
  template:
    metadata:
      labels:
        name: ${APP_NAME}--ninja
    spec:
      nodeSelector:
        nodegroup: ${WORKER_NODE_GROUP}
      restartPolicy: Always
      containers:
      - name: ${APP_NAME}--ninja-container
        image: ${IMAGE_NAME}
        command: ["pipenv", "run", "celery", "worker", "-A", "project", "--loglevel=info", "-Q", "ninja"]
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ${APP_NAME}--downloads
  labels:
    app: ${APP_NAME}
spec:
  replicas: ${CONTAINER_DOWNLOADS_REPLICAS}
  selector:
    matchLabels:
      name: ${APP_NAME}--downloads-pod
  template:
    metadata:
      labels:
        name: ${APP_NAME}--downloads-pod
    spec:
      nodeSelector:
        nodegroup: ${WORKER_NODE_GROUP}
      restartPolicy: Always
      containers:
      - name: ${APP_NAME}--downloads-container
        image: ${IMAGE_NAME}
        command: ["pipenv", "run", "celery", "worker", "-A", "project", "--loglevel=info", "-Q", "downloads"]
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ${APP_NAME}--beat
  labels:
    app: ${APP_NAME}
spec:
  replicas: ${CONTAINER_BEAT_REPLICAS}
  selector:
    matchLabels:
      name: ${APP_NAME}--beat-pod
  template:
    metadata:
      labels:
        name: ${APP_NAME}--beat-pod
    spec:
      nodeSelector:
        nodegroup: ${WORKER_NODE_GROUP}
      restartPolicy: Always
      containers:
      - name: ${APP_NAME}--beat-container
        image: ${IMAGE_NAME}
        command: ["pipenv", "run", "celery", "beat", "-A", "project", "--loglevel=info"]
