cilcalator-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cilcalator
spec:
  backend:
    serviceName: app-staging-service
    servicePort: 80
